align search bar better for zip https://github.com/Strategy11/BusinessDirectoryPlugin/issues/4770

--- a/assets/css/less/wpbdp.less
+++ b/assets/css/less/wpbdp.less
@@ -354,18 +354,6 @@ form#wpbdmsearchform a.advanced-search-link {
 }
 
 /* pages toolbar */
-.wpbdp-bar {
-    background: #f7f7f7;
-    margin: 10px 0 20px 0;
-    padding: 5px 10px;
-}
-
-.wpbdp-bar:before, .wpbdp-bar:after {
-    content: " ";
-    display: table;
-    clear: both;
-}
-
 .wpbdp-bar .wpbdp-search-form {
     margin: 0;
     padding: 0 !important;
@@ -798,6 +786,12 @@ body.business-directory #TB_secondLine {
 }
 .wpbdp-main-box .box-col input {
     width: 100%;
+}
+
+// Cover vertical aligning text.
+.distance-field-wrapper .box-row {
+	display: flex;
+	align-items: center;
 }
 
 .wpbdp-main-box .submit-btn input[type="submit"] {
